# maf-standalone

./: .coveragerc  .gitignore  .maf-config.example.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  EXTRACTION_SUMMARY.md  IMMEDIATE_TASKS.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  ROADMAP.md  TESTING_GUIDE.md  TEST_COVERAGE_UPDATE.md  TEST_IMPROVEMENT_PLAN.md  TEST_PROGRESS_REPORT.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_error_handling.py  test_framework.py  test_results.txt  unit_test_results.txt
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  coveralls.yml  test.yml
docs/: QUICK_START.md  README.md  TEST_COVERAGE_REPORT.md  TEST_DOCUMENTATION_INDEX.md  TEST_METRICS_DASHBOARD.md  error-handling-improvements.md  index.md  project-reorganization-updates.md  recent-changes.md
docs/api/: agents.md  cli.md
docs/architecture/: event-driven.md
docs/archive/: TEST_COVERAGE_SUMMARY.md  TEST_COVERAGE_UPDATE.md
docs/configuration/: modes-and-defaults.md
docs/development/: testing.md
docs/guides/: event-driven-migration.md  quick-start-improvements.md  quick-start.md
examples/: progress_demo.py
multi_agent_framework/: FILE_STRUCTURE.md  FRAMEWORK_IMPROVEMENTS.md  README.md  RECOVERY_FEATURES.md  __init__.py  check_migration_status.py  cli.py  config.py  launch_agents.sh  project_config.py  recovery_tool.py  requirements.txt  run_agents.py  setup_venv.sh  test_agent_communication.py  test_enhanced_agents.py  test_event_driven_agents.py  test_event_driven_simple.py  test_feature_with_debug.py  test_real_feature.py  test_simple_orchestrator.py  test_working_flow.py  trigger_feature.py
multi_agent_framework/agents/: base_agent.py  base_agent_configurable.py  event_driven_backend_agent.py  event_driven_base_agent.py  event_driven_db_agent.py  event_driven_devops_agent.py  event_driven_docs_agent.py  event_driven_frontend_agent.py  event_driven_orchestrator_agent.py  event_driven_qa_agent.py  event_driven_security_agent.py  event_driven_ux_ui_agent.py  orchestrator_agent.py
multi_agent_framework/core/: agent_factory.py  cross_agent_validator.py  error_handler.py  event_bus.py  event_bus_factory.py  event_bus_interface.py  file_integrator.py  intelligent_namer.py  (+10 more)
scripts/: README.md  check_agents.sh  install.sh  setup_venv.sh
test_cli_temp/: .env.example
tests/: conftest.py  pytest.ini  test_agent_communication.py  test_better_defaults.py  test_deployment_suite.py  test_event_driven_agents.py  test_event_driven_integration.py
(+59 files in other folders)
